--- a/client/public/index.html
+++ b/client/public/index.html
@@ -15,6 +15,13 @@
         margin: 0;
         box-sizing: border-box;
       }
+
+      [data-theme="dark"] {
+        background-color: #1a1b1e;
+      }
+      [data-theme="light"] {
+        background-color: whitesmoke;
+      }
     </style>
     <title>Bag</title>
   </head>
