--- a/client/public/index.html
+++ b/client/public/index.html
@@ -23,7 +23,7 @@
         background-color: whitesmoke;
       }
     </style>
-    <title>Bag</title>
+    <title>BAG</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
